--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 body {
   background: url('/css/noisy_grid.png');
 }
+
 .container {
   position: relative;
   min-width: 500px;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 175%;
+  padding-bottom: 25px;
 }
 
 .navigation {
@@ -73,8 +75,25 @@ body {
   padding: 1% 1% 1% 1%;
   margin-bottom: 10px;
   border-bottom: 1px solid #F3F3F3;
+  border-right: 2px solid #ccc;
   box-shadow: -5px 5px 5px 0 #ccc;
   width: 100%;
+}
+
+.results article:nth-child( 1n + 1) {
+  border-top: 5px solid #C7F464;
+}
+
+.results article:nth-child( 2n + 2 ) {
+  border-top: 5px solid #4ECDC4;
+}
+
+.results article:nth-child( 3n + 3 ) {
+  border-top: 5px solid #556270;
+}
+
+.results article:nth-child( 4n + 4 ) {
+  border-top: 5px solid #FF6B6B;
 }
 
 .results h3 a {
@@ -104,7 +123,7 @@ body {
   line-height: 1;
 }
 
-.summary a {
+.container a {
   color: #C44D58;
   text-decoration: none;
   font-weight: bold;
@@ -124,7 +143,7 @@ body {
 
 .info time {
   font-family: Impact, sans-serif;
-  font-size: 60%;
+  font-size: 70%;
   font-weight: bold;
   margin-top: 0;
 }
@@ -139,4 +158,9 @@ body {
   font-size: 80%;
   color: #FF6B6B;
   margin-bottom: 0;
+}
+
+footer {
+  text-align: center;
+  font-size: 60%;
 }
