--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,10 @@ body {
   margin-bottom: 15px;
 }
 
+.error {
+  text-align: center;
+}
+
 .publisher {
   text-transform: uppercase;
   font-weight: bold;
